--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,500;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>🌱 Pikmin Bloom 🌱</title>
+    <title>🌱 DEV Pikmin Bloom 🌱</title>
 </head>
 <body>
+    <header></header>
     <article>
-        <h1>🌻 Pikmin Bloom is uit!!!</h1>
+        <h1>🌻Pikmin Bloom is uit!!!</h1>
         <figure>
             <img src="Images/pikminbloom.webp" alt="Verschillende Pikmin met bloemen op het pad">
             <figcaption>
@@ -71,6 +75,9 @@
             aangevuld met eigen teksten. <a href="https://www.iculture.nl/nieuws/pikmin-bloom-downloaden/">Bron</a>
         </p>
     </article>
+    <footer>
+        <p> Gemaakt door Bor Dekker uit Klas SD1A </p>
+    </footer>
 </body>
 
 </html>
